Time: 46 ms (6.25%), Space: 92.1 MB (94.04%) - LeetHub